{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 104,
  "lineage": "0645224e-8601-94ac-de60-ecb55a36dedc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "private_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc8541b4dc7a841",
            "arn": "arn:aws:ec2:us-east-1:767397747857:elastic-ip/eipalloc-05fc8541b4dc7a841",
            "association_id": "eipassoc-0b467c25e2a654c77",
            "domain": "vpc",
            "id": "eipalloc-05fc8541b4dc7a841",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a3dd2ab875c7e383",
            "private_dns": "ip-10-0-19-250.ec2.internal",
            "private_ip": "10.0.19.250",
            "public_dns": "ec2-44-215-196-240.compute-1.amazonaws.com",
            "public_ip": "44.215.196.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "harish",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:767397747857:instance/i-0c370276e4a98550e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c370276e4a98550e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "harish-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09158ea4f46b25033",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_ip": "3.238.66.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e35994e5a1407c49",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ff801f54194942",
            "tags": {
              "Name": "harish"
            },
            "tags_all": {
              "Name": "harish"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd284d2b9d93331a"
            ]
          },
          "dependencies": [
            "aws_key_pair.harish",
            "aws_security_group.harish_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:767397747857:instance/i-06935c51b5c13e447",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06935c51b5c13e447",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "harish-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa09b1ad0660b4ca",
            "private_dns": "ip-10-0-56-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.56.116",
            "public_ip": "54.173.101.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079f29f4fc941c684",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd30d885ff109d28",
            "tags": {
              "Name": "harish"
            },
            "tags_all": {
              "Name": "harish"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd284d2b9d93331a"
            ]
          },
          "dependencies": [
            "aws_key_pair.harish",
            "aws_security_group.harish_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:internet-gateway/igw-01e8f858eb7e92eab",
            "id": "igw-01e8f858eb7e92eab",
            "owner_id": "767397747857",
            "tags": {
              "Name": "harish-vpc-igw"
            },
            "tags_all": {
              "Name": "harish-vpc-igw"
            },
            "vpc_id": "vpc-01428f3626047721c"
          },
          "dependencies": [
            "aws_vpc.harish_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "harish_vpc_private_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc8541b4dc7a841",
            "association_id": "eipassoc-0b467c25e2a654c77",
            "connectivity_type": "public",
            "id": "nat-06415d10a3c0177b9",
            "network_interface_id": "eni-0a3dd2ab875c7e383",
            "private_ip": "10.0.19.250",
            "public_ip": "44.215.196.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049ff801f54194942",
            "tags": {
              "Name": "harish-vpc-private-NAT"
            },
            "tags_all": {
              "Name": "harish-vpc-private-NAT"
            }
          },
          "dependencies": [
            "aws_eip.private_elastic_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:route-table/rtb-0d3b679a6d71254f8",
            "id": "rtb-0d3b679a6d71254f8",
            "owner_id": "767397747857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06415d10a3c0177b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01428f3626047721c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.private_elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.harish_vpc_private_NAT",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:route-table/rtb-0c286172d672b2c32",
            "id": "rtb-0c286172d672b2c32",
            "owner_id": "767397747857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e8f858eb7e92eab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01428f3626047721c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.harish_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026c85be9f7dd05e8",
            "route_table_id": "rtb-0d3b679a6d71254f8",
            "subnet_id": "subnet-01f72d8831590c862"
          },
          "dependencies": [
            "aws_eip.private_elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.harish_vpc_private_NAT",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd0bb375e64c1cf0",
            "route_table_id": "rtb-0d3b679a6d71254f8",
            "subnet_id": "subnet-054f15cc05868a143"
          },
          "dependencies": [
            "aws_eip.private_elastic_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.harish_vpc_private_NAT",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ea4077a7bb8bd6",
            "route_table_id": "rtb-0c286172d672b2c32",
            "subnet_id": "subnet-049ff801f54194942"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0596c33a4d1408150",
            "route_table_id": "rtb-0c286172d672b2c32",
            "subnet_id": "subnet-0cd30d885ff109d28"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "harish_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:security-group/sg-0fd284d2b9d93331a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd284d2b9d93331a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "harish-sg",
            "name_prefix": "",
            "owner_id": "767397747857",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01428f3626047721c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.harish_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:subnet/subnet-01f72d8831590c862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f72d8831590c862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397747857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-01428f3626047721c"
          },
          "dependencies": [
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:subnet/subnet-054f15cc05868a143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054f15cc05868a143",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397747857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-01428f3626047721c"
          },
          "dependencies": [
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:subnet/subnet-049ff801f54194942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ff801f54194942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397747857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-01428f3626047721c"
          },
          "dependencies": [
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:subnet/subnet-0cd30d885ff109d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd30d885ff109d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397747857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-01428f3626047721c"
          },
          "dependencies": [
            "aws_vpc.harish_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "harish_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397747857:vpc/vpc-01428f3626047721c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06dbb76496d58a140",
            "default_route_table_id": "rtb-01d4cd8d0571cea06",
            "default_security_group_id": "sg-0fdddd02f25878076",
            "dhcp_options_id": "dopt-01ef1840675704e10",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01428f3626047721c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d4cd8d0571cea06",
            "owner_id": "767397747857",
            "tags": {
              "Name": "harish-vpc"
            },
            "tags_all": {
              "Name": "harish-vpc"
            }
          }
        }
      ]
    }
  ]
}